# uuid-remapper

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
.github/workflows/: rust.yml
.github/workflows/action-rs/: grcov.yml
src/: anvil.rs  main.rs  mapping.rs  nbt.rs  remap.rs  remapper.rs  task.rs  text.rs
