[package]
name = "uuid-remapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.1"
flate2 = "1.0.28"
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
log = { version = "0.4.20", features = ["std"] }
md5 = "0.7.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
uuid = { version = "1.7.0", features = ["md5", "serde", "v3"] }

[dev-dependencies]
valence_nbt = { git = "https://github.com/valence-rs/valence.git", rev="a36d247", features = [ "serde", "binary", "snbt" ]}
